[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorstamps"
version = "0.1.2"
description = "2D colormaps for every occasion"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Trygve Ræder", email = "tmara@dtu.dk"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "colorspacious",
    "numpy",
    "matplotlib",
    "scipy"
]

[project.urls]
homepage = "https://github.com/trygvrad/colorstamps"
